--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.main.allow-circular-references=true
