-resolved nae's comments

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.main.allow-circular-references=true
+scheduled.tasks.enabled=true
